# CUDA-CenterPoint

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.devcontainer/: Dockerfile  devcontainer.json
include/: centerpoint.h  common.h  postprocess.h  preprocess.h  tensorrt.hpp
src/: centerpoint.cpp  postprocess.cpp  preprocess.cpp  tensorrt.cpp
tool/: build.trt.sh  environment.sh
